Salesforce Training org/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Active_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) -  YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <description>This Field for Student Attendance. so we can set work flow rule for  Email alert to Father</description>
        <label>Attendance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bright_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bright Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>City</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_School_Id__c</fullName>
        <formula>CASESAFEID(  Class__r.School__c  )</formula>
        <label>Custom School Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>About birth date of students.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_term__c</fullName>
        <label>Design term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Inliecte</fullName>
                </value>
                <value>
                    <fullName>Capx</fullName>
                </value>
                <value>
                    <fullName>All of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Father_Email__c</fullName>
        <description>This field for father email detail</description>
        <label>Father Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Info__c</fullName>
        <formula>Class__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Classes__c</fullName>
        <label>No Of Classes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Leave_Days__c</fullName>
        <label># Of Leave Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Number__c</fullName>
        <label>Rank Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rajected</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_TBD__c</fullName>
        <label>Test TBD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number__c</fullName>
        <label>Total Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendance__c</columns>
        <columns>Father_Email__c</columns>
        <columns>Father_Name__c</columns>
        <columns>Bright_Student__c</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Test_TBD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Govt_Affiliated</fullName>
        <active>true</active>
        <label>Govt_Affiliated</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_For_Check_CheckBox_Is_True_Update</fullName>
        <active>false</active>
        <errorConditionFormula>IF( CheckBox__c ==false,  ISCHANGED( Total_Number__c ) , false)</errorConditionFormula>
        <errorMessage>Please Enter True Check Box For Updating Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_For_That_Student_Will_Not_Deleted</fullName>
        <active>false</active>
        <errorConditionFormula>Name =&apos;Modi&apos; || Name =&apos;Sachin&apos;</errorConditionFormula>
        <errorMessage>You Can Not Update  this Student</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Only_Contain_Alphabetic_Values</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(Name, &quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
        <errorMessage>Please Enter Only Alphabetic Values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Phone_Number</fullName>
        <active>false</active>
        <description>This VR is check the phone number is not greather than 10 and not less than 10.</description>
        <errorConditionFormula>LEN( Phone_Number__c )&lt;&gt;10</errorConditionFormula>
        <errorMessage>Please type 10 digit only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Student_Age</fullName>
        <active>false</active>
        <description>its VR for birth date of student</description>
        <errorConditionFormula>YEAR(  Date_of_Birth__c  ) &gt; YEAR( TODAY())</errorConditionFormula>
        <errorMessage>Please enter valid birth date.</errorMessage>
    </validationRules>
</CustomObject>